[package]
name = "seize"
version = "0.4.5"
edition = "2021"
license = "MIT"
authors = ["Ibraheem Ahmed <ibraheem@ibraheem.ca>"]
description = "Fast, efficient, and robust memory reclamation for concurrent data structures."
repository = "https://github.com/ibraheemdev/seize"
keywords = ["lock-free", "atomic", "garbage"]
categories = ["concurrency", "memory-management"]

[dependencies]
membarrier = { path = "../../membarrier-rs", optional = true }

[features]
# Enables fast memory barriers that reduce the overhead of creating guards.
fast-barrier = ["membarrier"]

[dev-dependencies]
criterion = "0.3.5"
crossbeam-epoch = "0.9.8"
haphazard = { git = "https://github.com/jonhoo/haphazard", rev = "e0e18f60f78652a63aba235be854f87d106c1a1b" }

[[bench]]
name = "stack"
harness = false

[[bench]]
name = "single_thread"
harness = false
