[package]
name = "thread_local"
version = "1.1.3"
authors = ["Amanieu d'Antras <amanieu@gmail.com>"]
description = "Per-object thread-local storage"
documentation = "https://docs.rs/thread_local/"
license = "Apache-2.0/MIT"
repository = "https://github.com/Amanieu/thread_local-rs"
readme = "README.md"
keywords = ["thread_local", "concurrent", "thread"]
edition = "2018"

[badges]
travis-ci = { repository = "Amanieu/thread_local-rs" }

[dependencies]
once_cell = "1.5.2"

# This is actually a dev-dependency, see https://github.com/rust-lang/cargo/issues/1596
criterion = { version = "0.3.3", optional = true }

[dev-dependencies]

[[bench]]
name = "thread_local"
required-features = ["criterion"]
harness = false
